# dynasub

./: README.md  pyproject.toml
.github/workflows/: publish.yml  setup.yml
dynasub/: __init__.py  __main__.py  dynasub.pth  init.py
src/encodings/: dynasub.py  init.py
