[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dynasub"
version = "0.0.0"
description = "Use ${var} syntax to substitute variables into Python code at runtime"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/scooterking38/dynasub"
