[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynasub"
version = "1.1.0"
description = "Use ${var} syntax to substitute variables into Python code at runtime"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/scooterking38/dynasub"
