[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dynasub"
version = "0.1.0"
description = "Inline ${var} substitution via a custom codec"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["sitecustomize"]

[tool.setuptools.packages.find]
where = ["."]
